[#30] Add volume to candlesticks + remove code related to dynamic interval calculation
