# api/openapi.yml
@@ -90,12 +90,7 @@ components:
       type: string
       enum:
         - 1m
-        - 5m
-        - 15m
-        - 30m
         - 1h
-        - 6h
-        - 12h
         - 1d
     Error:
       type: object
@@ -136,17 +131,17 @@ components:
                 properties:
                   time:
                     $ref: '#/components/schemas/Timestamp'
-                  ohlc:
+                  ohlcv:
                     type: array
                     items:
                       type: array
-                      minItems: 4
-                      maxItems: 4
+                      minItems: 5
+                      maxItems: 5
                       items:
                         type: number
                 required:
                   - time
-                  - ohlc
+                  - ohlcv
           required:
             - exchange
             - symbol
